extension/css/popup.css
/* text-based popup styling */
.white-popup {
  position: relative;
  background: #F5F5F5;
  color:black;
  padding: .4vw;
  height: 30vw;
  width: 40vw;
  margin: 0 auto;
  border-radius: 0.5vw;
}

hr {
    border: 0;
    position: absolute;
    height: 1px;
    background: #333;
    background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
    background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);
    background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);
    background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
}

#banner-hr {
  width:38vw;
  left:1vw;
  top:9.8vw;
}

#button-hr {
  width:8vw;
  right:1.5vw;
  top:19vw;
}

a:visited {
  color:blue;
}

.popup-content {
	position: absolute;
	top: 11vw;
	left: 1.5vw;
	height:15vw;
	width:28vw;
}
#updates {
  overflow:auto;
}

#about {
	font-size:0.8vw;
}

.version {
	font-weight: bold;
	font-size:1vw;
}

.version-list {
	list-style-position: inside;
	font-size:0.8vw;
	margin-top: 0.2vw;
	width:25vw;
	padding-left: 1vw;
	margin-bottom:2.2vw;
}

#main-image {
	width: 39.2vw;
	height: 9.2vw;
}

#link-label {
	position: absolute;
	right: 1.4vw;
	bottom: 3.0vw;
  font-size: .8vw;
  cursor:default;
}

#link-input {
	position: absolute;
	right: 0.7vw;
	bottom: 1vw;
	width:9vw;
  font-size: 0.9vw;
  cursor:text;
}

.pressed-button {
	position:absolute;
	right:1.5vw;
	font-size: 1vw;
	background: #1B5E20;
	border-bottom: 2px solid #1B5E20;
	border-top:0;
	border-left:0;
	border-right:0;
	color: #9E9E9E;
	width: 8vw;
	height: 2.2vw;
	text-decoration: none;
	vertical-align: middle;
}

.pressed-button:hover {
	background: #1B5E20;
	color: #9E9E9E;
}

.pressed-button:active {
	border:0;
	background: #1B5E20;
}

.default-button {
	position:absolute;
	right:1.5vw;
	font-size: 1vw;
	background: #43A047;
	border-bottom: 2px solid #388E3C;
	border-top:0;
	border-left:0;
	border-right:0;
	color: #F5F5F5;
	width: 8vw;
	height: 2.2vw;
	text-decoration: none;
	vertical-align: middle;
}

.default-button:hover {
	background: #4CAF50;
	color: #FFFFFF;
}

.default-button:active {
	border:0;
	background: #1B5E20;
}

#about-button {
  top:11.3vw;
}

#updates-button {
  top:14vw;
}

#settings-button {
	top:16.7vw;
}

#twitter-button {
	position:absolute;
	top:20vw;
	right:1.5vw;
	font-size: 1vw;
	background: #1976D2;
	border-bottom: 2px solid #0D47A1;
	border-top:0;
	border-left:0;
	border-right:0;
	color: #F5F5F5;
	width: 8vw;
	height: 2.2vw;
	text-decoration: none;
	vertical-align: middle;
}

#twitter-button:hover {
  background: #2196F3;
  color: #FFFFFF;
}

#twitter-button:active {
	border:0;
  background: #0D47A1;
}

#feedback-button {
	position:absolute;
	top:22.7vw;
	right:1.5vw;
	font-size: 1vw;
	background: #D32F2F;
	border-bottom: 2px solid #B71C1C;
	border-top:0;
	border-left:0;
	border-right:0;
	color: #F5F5F5;
	width: 8vw;
	height: 2.2vw;
	text-decoration: none;
	vertical-align: middle;
}

#feedback-button:hover {
  background: #FF1744;
  color: #FFFFFF;
}

#feedback-button:active {
	border:0;
  background: #B71C1C;
}
/*

====== Zoom effect ======

*/
.mfp-zoom-in {
  /* start state */

  /* animate in */
  /* animate out */
}

.mfp-content {
  perspective: 2000px;
}

.mfp-zoom-in .mfp-with-anim {
  opacity: 0;
  transition: all .4s ease-in-out;
  transform: rotateX(-90deg);
}
.mfp-zoom-in.mfp-bg {
  opacity: 0;
  transition: all .4s ease-out;
}
.mfp-zoom-in.mfp-ready .mfp-with-anim {
  opacity: 1;
  transform: scale(1);
}
.mfp-zoom-in.mfp-ready.mfp-bg {
  opacity: 0.8;
}
.mfp-zoom-in.mfp-removing .mfp-with-anim {
  transform: rotateX(-90deg);
  opacity: 0;
}
.mfp-zoom-in.mfp-removing.mfp-bg {

  transition: all .8s ease-out;
  opacity: 0;
}

